@@ -360,6 +360,7 @@ Taming.Listener=Taming:
 Taming.SkillName=TAMING
 Taming.Skillup=[[YELLOW]]Taming skill increased by {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Summoning complete
+Taming.Summon.Lifespan=[[YELLOW]] (Lifespan: {0}s)
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
 Taming.Summon.Fail.Horse=[[RED]]You have too many horses nearby to summon any more.
